--- a/LaTeX/2.4 Sequences and Summations/2.4.36/2.4.36.tex
+++ b/LaTeX/2.4 Sequences and Summations/2.4.36/2.4.36.tex
@@ -13,12 +13,15 @@
 
 \begin{document}
 	
-	\begin{theorem*}[2.4.36]
-		A subset of a countable set is countable.
-	\end{theorem*}
-	
-	\begin{proof}
-		Let $A$ and $B$ be sets such that $A \subseteq B$. $B$ is countable by the hypothesis, and so by the definition for countability $|B| \le \aleph_0$. By the definition of subset, $|A| \le |B| \therefore |A| \le \aleph_0$ and it follows that the subset of a countable set is countable.
-	\end{proof}
+\begin{theorem*}[\textbf{2.4.36}]
+    A subset of a countable set is countable.
+\end{theorem*}
+
+\begin{proof}
+    Let $A$ and $B$ be sets such that $A \subseteq B$. $B$ is countable by the hypothesis, and 
+    so by the definition for countability $|B| \le \aleph_0$. By the definition of subset, 
+    $|A| \le |B| \therefore |A| \le \aleph_0$ and it follows that the subset of a countable set 
+    is countable.
+\end{proof}
 
 \end{document}
