--- a/LaTeX/2.4 Sequences and Summations/2.4.42/2.4.42.tex
+++ b/LaTeX/2.4 Sequences and Summations/2.4.42/2.4.42.tex
@@ -14,18 +14,26 @@
 
 \begin{document}
 	
-	\begin{theorem*}[2.4.42]
-		The cardinality of $\mathbb{Z^{+}} \times \mathbb{Z^{+}}$ is aleph null.
-	\end{theorem*}
-	
-	\begin{proof}
-		$\mathbb{Z^{+}} \times \mathbb{Z^{+}}$ is defined as $\{\ord{x, y} | (x \in \mathbb{Z^{+}}) \land (y \in \mathbb{Z^{+}})\}$. Since $x$ and $y$ are positive integers, for every ordered pair $\ord{x, y}$ in $\mathbb{Z^{+}} \times \mathbb{Z^{+}}$, $\ord{x, y}$ exists if and only if the rational number $\frac{x}{y}$ exists. Thus, $\frac{x}{y}$ exists, and all elements in $\mathbb{Z^{+}} \times \mathbb{Z^{+}}$ can be represented by the two dimensional list
-		\newline \indent $\ord{1,1} \iff \frac{1}{1}$, $\ord{1,2} \iff \frac{1}{2}$, $\ord{1,3} \iff \frac{1}{3}$, $\dots$
-		\newline \indent $\ord{2,1} \iff \frac{2}{1}$, $\ord{2,2} \iff \frac{2}{2}$, $\ord{2,3} \iff \frac{2}{3}$, $\dots$
-		\newline \indent $\ord{3,1} \iff \frac{3}{1}$, $\ord{3,2} \iff \frac{3}{2}$, $\ord{3, 3} \iff \frac{3}{3}$, $\dots$
-		\newline \indent \indent $\vdots$
-		\newline 
-		The hypotheses in the biconditional converse statements for each list entry are the list elements in the proof for the countability of rational numbers. That means $\mathbb{Z^{+}} \times \mathbb{Z^{+}}$ is countable if and only if the rational numbers are countable. We know the rational numbers are countable. Therefore the cardinality of $\mathbb{Z^{+}} \times \mathbb{Z^{+}}$ is $\aleph_0$.
-	\end{proof}
+\begin{theorem*}[\textbf{2.4.42}]
+    The cardinality of $\mathbb{Z^{+}} \times \mathbb{Z^{+}}$ is aleph null.
+\end{theorem*}
+
+\begin{proof}
+    $\mathbb{Z^{+}} \times \mathbb{Z^{+}}$ is defined as 
+    $\{\ord{x, y} | (x \in \mathbb{Z^{+}}) \land (y \in \mathbb{Z^{+}})\}$. 
+    Since $x$ and $y$ are positive integers, for every ordered pair $\ord{x, y}$ in 
+    $\mathbb{Z^{+}} \times \mathbb{Z^{+}}$, $\ord{x, y}$ exists if and only if the rational number 
+    $\frac{x}{y}$ exists. Thus, $\frac{x}{y}$ exists, and all elements in 
+    $\mathbb{Z^{+}} \times \mathbb{Z^{+}}$ can be represented by the two dimensional list
+    $$\ord{1,1} \iff \frac{1}{1}, \ord{1,2} \iff \frac{1}{2}, \ord{1,3} \iff \frac{1}{3}, \dots$$
+    $$\ord{2,1} \iff \frac{2}{1}, \ord{2,2} \iff \frac{2}{2}, \ord{2,3} \iff \frac{2}{3}, \dots$$
+    $$\ord{3,1} \iff \frac{3}{1}, \ord{3,2} \iff \frac{3}{2}, \ord{3,3} \iff \frac{3}{3}, \dots$$
+    $$\vdots$$
+    The hypotheses in the biconditional converse statements for each list entry are the list 
+    elements in the proof for the countability of rational numbers. That means 
+    $\mathbb{Z^{+}} \times \mathbb{Z^{+}}$ is countable if and only if the rational numbers are 
+    countable. We know the rational numbers are countable. Therefore the cardinality of 
+    $\mathbb{Z^{+}} \times \mathbb{Z^{+}}$ is $\aleph_0$.
+\end{proof}
 
 \end{document}
