--- a/LaTeX/2.4 Sequences and Summations/2.4.22/2.4.22.tex
+++ b/LaTeX/2.4 Sequences and Summations/2.4.22/2.4.22.tex
@@ -13,12 +13,34 @@
 
 \begin{document}
 	
-	\begin{theorem*}[2.4.22]
-		The sum of squares from 1 to n is $\frac{n(n+1)(2n+1)}{6}$.
-	\end{theorem*}
-	
-	\begin{proof}
-		Let $n$ and $k$ be integers. By the Binomial Theorem, \newline $(k-1)^{3} = k^{3} - 3k^{2} + 3k - 1$. This means that $k^{3} - (k - 1)^{3} = 3k^{2} - 3k + 1$. By Theorem 2.4.19, $n^{3} = \sum_{k=1}^{n} k^{3} - (k - 1)^{3}$. Thus, $n^{3} = \sum_{k=1}^{n} 3k^{2} - 3k + 1$. This statement is equivalent to $n^{3} = (3\sum_{k=1}^{n} k^{2}) - (3\sum_{k=1}^{n} k) + (\sum_{k=1}^{n} 1)$. By Theorem 2.4.21a, and by Theorem 2.4.21b, that is \newline  $n^{3} = (3\sum_{k=1}^{n} k^{2}) - 3 \frac{n(n+1)}{2} + n$; or rather $n^{3} + 3\frac{n(n+1)}{2} - n = 3\sum_{k=1}^{n} k^{2}$. Eliminating the coefficient $3$ from the right-hand side, all that is left to do is to simplify the left-hand side $\frac{1}{3}[n^{3} + 3\frac{n(n+1)}{2} - n] = \sum_{k=1}^{n} k^{2}$. On the left-hand side we have $\frac{2n^{3} + 3n^{2} + 3n - 2n}{6} = \frac{2n^{3} + 3n^{2} + n}{6}$. Factoring $\frac{1}{6}n$ out of this expression gives $\frac{1}{6}n(2n^{2} + 3n + 1) = \frac{1}{6}n(2n^{2} + 2n + n + 1)$. Factoring the first two terms in the sum, $\frac{1}{6}n[2n(n + 1) + (n + 1)]$. The simplification process is completed by factoring $(n+1)$ out of the sum, $\frac{1}{6}n(n+1)(2n+1)$. That is, $\sum_{k=1}^{n} k^{2} = \frac{n(n+1)(2n+1)}{6}$.
-	\end{proof}
+\begin{theorem*}[\textbf{2.4.22}]
+    The sum of squares from 1 to n is $$\frac{n(n+1)(2n+1)}{6}$$.
+\end{theorem*}
+
+\begin{proof}
+    Let $\{a_n\}$ be the sequence of integers from $1$ to $n$. The formula for the 
+    summation of squares from $1$ to $n$ can be derived from the cube of $n$. By 
+    theorem 2.4.19, $$n^3 = \sum_{k=1}^{n} k^3 - (k-1)^3$$ This summation is 
+    telescopic, and thus collapses to $n^3 - (1 - 1)^3 = n^3$. The expansion for 
+    $(k-1)^3$ in that term of summation is $k^{3} - 3k^{2} + 3k - 1$, by the Binomial 
+    Theorem. Thus, yielding the algebraic identity 
+    $$k^{3} - (k - 1)^{3} = 3k^{2} - 3k + 1$$ Hence, 
+    $n^{3} = \sum_{k=1}^{n} 3k^{2} - 3k + 1$, and by the field axioms,
+    $$n^{3} = \left(3\sum_{k=1}^{n} k^{2}\right) - \left(3\sum_{k=1}^{n} k\right) + \left(\sum_{k=1}^{n} 1\right)$$
+    Note that $(\sum_{k=1}^n 1) = n(1)$, and by Theorem 2.4.21b, 
+    $(3\sum_{k=1}^{n} k) = 3(\frac{n(n+1)}{2})$. Thus, 
+    $$n^{3} + 3\frac{n(n+1)}{2} - n = 3\sum_{k=1}^{n} k^{2}$$
+    Eliminating the coefficient 
+    $3$ from the right-hand side by division gives us the sum of squares in terms of an 
+    equation, $$\frac{1}{3}\left(n^{3} + 3\frac{n(n+1)}{2} - n\right) = \sum_{k=1}^{n} k^{2}$$ 
+    All that is left to do is to simplify the left-hand side 
+    $\frac{1}{3}[n^{3} + 3\frac{n(n+1)}{2} - n] = \frac{2n^{3} + 3n^{2} + 3n - 2n}{6}$. 
+    Factoring $\frac{1}{6}n$ gives 
+    $\frac{1}{6}n(2n^{2} + 3n + 3 - 2) = \frac{1}{6}n(2n^{2} + 2n + n + 1)$. Factoring $2n$
+    out of the first two terms in the sum, $\frac{1}{6}n[2n(n + 1) + (n + 1)]$. The 
+    simplification process is complete by factoring $(n+1)$ out of the sum, \\ 
+    $\frac{1}{6}n(n+1)(2n+1)$. Thus, the sum of squares $$\sum_{k=1}^{n} k^{2} = 
+    \frac{n(n+1)(2n+1)}{6}$$
+\end{proof}
 
 \end{document}
