--- a/LaTeX/2.4 Sequences and Summations/2.4.25/2.4.25.tex
+++ b/LaTeX/2.4 Sequences and Summations/2.4.25/2.4.25.tex
@@ -13,12 +13,46 @@
 
 \begin{document}
 	
-	\begin{theorem*}[2.4.25]
-		Let m be a positive integer. The closed form formula for $\sum_{k=0}^{m} \floor{\sqrt{k}}$ is $\floor{\sqrt{m}}[\frac{1}{6}(\floor{\sqrt{m}}-1)(4\floor{\sqrt{m}}+1) + (m - \floor{\sqrt{m}}^{2} + 1)]$.
-	\end{theorem*}
-	
-	\begin{proof}
-		By the properties for floor functions, there exists an integer $n = \floor{\sqrt{k}}$ such that $n^{2} \le k < n^{2} + 2n + 1$. This means that each term less than $\floor{\sqrt{m}}$ in the summation occurs exactly $2\floor{\sqrt{k}}+1$ times. Since the last term of summation occurs $(m - \floor{\sqrt{m}}^{2} + 1)$ times, \newline $(\sum_{k=0}^{m} \floor{\sqrt{k}}) - \floor{\sqrt{m}}(m - \floor{\sqrt{m}}^{2} + 1) = \newline  \floor{\sqrt{0}}(2\floor{\sqrt{0}} + 1) + \dots + (\floor{\sqrt{m}}-1)[2(\floor{\sqrt{m}}-1) + 1]$. By the pattern in the terms of that summation the following equation holds, $\sum_{k=0}^{m} \floor{\sqrt{k}} = \newline (\sum_{k=0}^{\floor{\sqrt{m}}-1} k(2k + 1)) + \floor{\sqrt{m}}(m - \floor{\sqrt{m}}^{2} + 1)$. The summation on the right-hand side is the summation of squares, and the summation of integers. Thus, $\sum_{k=0}^{m} \floor{\sqrt{k}} = (2\sum_{k=0}^{\floor{\sqrt{m}}-1} k^{2}) + (\sum_{k=0}^{\floor{\sqrt{m}}-1} k) + [\floor{\sqrt{m}}(m - \floor{\sqrt{m}}^{2} + 1)]$. By Theorem 2.4.22, and by Theorem 2.4.21b, the formula is immediately derived $\sum_{k=0}^{m} \floor{\sqrt{k}} = \frac{2}{6}\floor{\sqrt{m}}(\floor{\sqrt{m}}-1)[2(\floor{\sqrt{m}}-1)+1] + \frac{3}{6}\floor{\sqrt{m}}(\floor{\sqrt{m}}-1) + \floor{\sqrt{m}}(m - \floor{\sqrt{m}}^{2} + 1)$. Factoring $\frac{1}{6}\floor{\sqrt{m}}(\floor{\sqrt{m}}-1)$ out of the first two terms yields $\sum_{k=0}^{m} \floor{\sqrt{k}} = \frac{1}{6}\floor{\sqrt{m}}(\floor{\sqrt{m}}-1)\{2[2(\floor{\sqrt{m}}-1)+1] +3\}+\floor{\sqrt{m}}(m - \floor{\sqrt{m}}^{2} + 1)$. Simplifying that is, $\sum_{k=0}^{m} \floor{\sqrt{k}} = \newline \frac{1}{6}\floor{\sqrt{m}}(\floor{\sqrt{m}}-1)(4\floor{\sqrt{m}} + 1) +\floor{\sqrt{m}}(m - \floor{\sqrt{m}}^{2} + 1)$. Factoring $\floor{\sqrt{m}}$, \newline $\sum_{k=0}^{m} \floor{\sqrt{k}} = \floor{\sqrt{m}}[\frac{1}{6}(\floor{\sqrt{m}}-1)(4\floor{\sqrt{m}}+1) + (m - \floor{\sqrt{m}}^{2} + 1)]$.
-	\end{proof}
+\begin{theorem*}[\textbf{2.4.25}]
+    Let m be a positive integer. The closed form formula for $\sum_{k=0}^{m} \floor{\sqrt{k}}$ 
+    is $\floor{\sqrt{m}}[\frac{1}{6}(\floor{\sqrt{m}}-1)(4\floor{\sqrt{m}}+1) + 
+    (m - \floor{\sqrt{m}}^{2} + 1)]$.
+\end{theorem*}
+
+\begin{proof}
+    By the properties for floor functions, there exists an integer $n = \floor{\sqrt{k}}$ 
+    if and only if $n^{2} \le k < n^{2} + 2n + 1$. Thus, each integer value 
+    $n < \floor{\sqrt{m}}$ occurs exactly $2n + 1$ times, in the terms of summation. The value
+    $n = \floor{\sqrt{m}}$ occurs exactly $(m - \floor{\sqrt{m}}^{2} + 1)$ times. Subtracting 
+    those terms $n = \floor{\sqrt{m}}$ from $\sum_{k=0}^{m} \floor{\sqrt{k}}$ produces the 
+    sequence $$\floor{\sqrt{0}}(2\floor{\sqrt{0}} + 1) + \dots + 
+    (\floor{\sqrt{m}}-1)[2(\floor{\sqrt{m}}-1) + 1]$$
+    Summarily expressed as $$\sum_{n=0}^{\floor{\sqrt{m}}-1} n(2n + 1)$$ Thus,
+    $$\sum_{k=0}^{m} \floor{\sqrt{k}} = 
+    \left(\sum_{n=0}^{\floor{\sqrt{m}}-1} n(2n + 1)\right) + 
+    \floor{\sqrt{m}}(m - \floor{\sqrt{m}}^{2} + 1)$$
+    That is, the summation of squares, and integers
+    $$\sum_{k=0}^{m} \floor{\sqrt{k}} = 
+    \left(2\sum_{n=0}^{\floor{\sqrt{m}}-1} n^{2}\right) + 
+    \left(\sum_{n=0}^{\floor{\sqrt{m}}-1} n\right) + 
+    [\floor{\sqrt{m}}(m - \floor{\sqrt{m}}^{2} + 1)]$$
+    By Theorem 2.4.22, and by Theorem 2.4.21b
+    $$\sum_{k=0}^{m} \floor{\sqrt{k}} = 
+    \left\{\frac{2}{6}\floor{\sqrt{m}}(\floor{\sqrt{m}}-1)[2(\floor{\sqrt{m}}-1)+1]\right\}+$$
+    $$\left\{\frac{3}{6}\floor{\sqrt{m}}(\floor{\sqrt{m}}-1)\right\} + \floor{\sqrt{m}}(m - 
+    \floor{\sqrt{m}}^{2} + 1)$$
+    Factoring $\frac{1}{6}\floor{\sqrt{m}}(\floor{\sqrt{m}}-1)$ out of the first two terms 
+    yields 
+    $$\frac{1}{6}\floor{\sqrt{m}}(\floor{\sqrt{m}}-1)\{2[2(\floor{\sqrt{m}}-1)+1] +3\}+
+    \floor{\sqrt{m}}(m - \floor{\sqrt{m}}^{2} + 1)$$
+    And by arithmetic simplification that is
+    $$\frac{1}{6}\floor{\sqrt{m}}(\floor{\sqrt{m}}-1)(4\floor{\sqrt{m}} + 1) + 
+    \floor{\sqrt{m}}(m - \floor{\sqrt{m}}^{2} + 1)$$
+    Factoring $\floor{\sqrt{m}}$ from the outer sum completes the derivation
+    $$\sum_{k=0}^{m} \floor{\sqrt{k}} = 
+    \floor{\sqrt{m}}\left[\frac{1}{6}(\floor{\sqrt{m}}-1)(4\floor{\sqrt{m}}+1) + 
+    (m - \floor{\sqrt{m}}^{2} + 1)\right]$$.
+\end{proof}
+
 
 \end{document}
