--- a/LaTeX/2.4 Sequences and Summations/2.4.37/2.4.37.tex
+++ b/LaTeX/2.4 Sequences and Summations/2.4.37/2.4.37.tex
@@ -13,12 +13,16 @@
 
 \begin{document}
 	
-	\begin{theorem*}[2.4.37]
-		Let A, and B be sets such that $A \subseteq B$. If A is \newline uncountable, then B is uncountable.
-	\end{theorem*}
-	
-	\begin{proof}
-		By the hypothesis, $|A| > \aleph_0$ by the definition for countability since $A$ is uncountable. By the definition for subset, the cardinality of $B$ is at least the cardinality of $A$. Therefore the least cardinality for $B$ is $|B| > \aleph_0$, and it follows that $B$ is uncountable.
-	\end{proof}
+\begin{theorem*}[\textbf{2.4.37}]
+    Let A, and B be sets such that $A \subseteq B$. If A is \newline uncountable, then B is 
+    uncountable.
+\end{theorem*}
+
+\begin{proof}
+    By the hypothesis, $|A| > \aleph_0$ by the definition for countability since $A$ is 
+    uncountable. By the definition for subset, the cardinality of $B$ is at least the cardinality 
+    of $A$. Therefore the least cardinality for $B$ is $|B| > \aleph_0$, and it follows that $B$ 
+    is uncountable.
+\end{proof}
 
 \end{document}
