ch4 theorem references

--- a/resources/LaTeX/2.4.sequences.and.summations/0011L_2402L/0011L_2402L.tex
+++ b/resources/LaTeX/2.4.sequences.and.summations/0011L_2402L/0011L_2402L.tex
@@ -35,7 +35,7 @@
 \begin{proof}
     Let \bm{$\Phi$} be two times the sum of squares from zero to \bm{$\lambda$} minus one.
     Let \bm{$\mathrm{X}$} be the sum of integers from zero to \bm{$\lambda$} minus one.
-    By theorems 2422, and 2421b, and by shifting the index of summation,
+    By theorems 103, and 102, and by shifting the index of summation,
     \begin{equation*}
         \Bigg\{
             \Phi + \mathrm{X}
