--- a/resources/LaTeX/2.4.sequences.and.summations/0014L_2405L/0014L_2405L.tex
+++ b/resources/LaTeX/2.4.sequences.and.summations/0014L_2405L/0014L_2405L.tex
@@ -41,7 +41,7 @@
     Let \bm{$\Phi$} be three times the summation of cubes from zero to lambda minus one.
     Let \bm{$\mathrm{X}$} be three times the summation of squares from zero to lambda minus one.
     Let \bm{$\Omega$} be the summation of integers from zero to lambda minus one.
-    By theorems 2422 and 2421b, 
+    By theorems 103 and 102, 
     by the closed formula for the summation of cubes,
     and by shifting the index of summation,
     \begin{equation*}
