--- a/resources/LaTeX/2.4.sequences.and.summations/0102_2421b/0102_2421b.tex
+++ b/resources/LaTeX/2.4.sequences.and.summations/0102_2421b/0102_2421b.tex
@@ -27,7 +27,7 @@
     from the summation of odd numbers from \bm{$1$} to \bm{$\lambda$}.
     By the definition for odd numbers, 
     an integer \bm{$\phi$} exists such that,
-    by Theorem 2.4.21a
+    by Theorem 101
     \begin{equation*}
         \sum_{\phi=1}^\lambda 2 \phi - 1 
             = 
