--- a/resources/LaTeX/2.4.sequences.and.summations/0103_2422/0103_2422.tex
+++ b/resources/LaTeX/2.4.sequences.and.summations/0103_2422/0103_2422.tex
@@ -32,7 +32,7 @@
     It is trivial that 
     \bm{$\lambda ^3 = \lambda ^3 - \big \langle 1 - 1 \big \rangle ^3$}. 
     By this identity for \bm{$\lambda$},
-    the cube of \bm{$\lambda$} is the telescopic summation given by Theorem 2419, 
+    the cube of \bm{$\lambda$} is the telescopic summation given by Theorem 99, 
     \begin{equation*}
         \lambda ^3 
             = 
@@ -70,7 +70,7 @@
             = 
         \lambda \big \langle 1 \big \rangle
     $}. 
-    And by Theorem 2421b, 
+    And by Theorem 102, 
     \bm{$
         \sum_{\iota=1}^\lambda \iota 
             = 
@@ -105,7 +105,7 @@
             = 
         \sum_{\iota=1}^\lambda \iota ^2
     \end{equation*}
-    By Lemma 2401, that is
+    By Lemma 10, that is
     \begin{equation*}
         \bm{
             \sum_{\iota=1}^\lambda \iota ^2 
